--- a/assets/fcadmin/css/app.css
+++ b/assets/fcadmin/css/app.css
@@ -1,5 +1,10 @@
 /* default margin css start */
-
+:root {
+    --main-color: #a4da22;
+    --main-color-hover: #a4da2259;
+    --main-bg-dark: #013f17;
+    --main-btn-primary: #056526;
+  }
 .my-5 {
     margin: 5px 0;
 }
@@ -1431,7 +1436,7 @@ a span {
 a:hover,
 a span:hover {
     text-decoration: none;
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 table {
@@ -1589,7 +1594,7 @@ span {
 }
 
 .nav-tabs-primary .nav-item a.active {
-    border-bottom: 2px solid #4634ff;
+    border-bottom: 2px solid var(--main-color);
 }
 
 .hover--effect1 {
@@ -1709,7 +1714,7 @@ a {
 /* typography css end */
 /* color css start */
 .text--primary {
-    color: #4634ff !important;
+    color: var(--main-color) !important;
 }
 
 .text--secondary {
@@ -1908,7 +1913,7 @@ a {
 }
 
 .bg--primary {
-    background-color: #4634ff !important;
+    background-color: var(--main-color) !important;
 }
 
 .bg--secondary {
@@ -1932,7 +1937,7 @@ a {
 }
 
 .bg--dark {
-    background-color: #071251 !important;
+    background-color: var(--main-bg-dark) !important;
 }
 
 .bg--white {
@@ -2476,7 +2481,7 @@ a {
 }
 
 [class*="overlay"].overlay--primary::before {
-    background-color: #4634ff !important;
+    background-color: var(--main-color) !important;
 }
 
 [class*="overlay"].overlay--secondary::before {
@@ -2727,11 +2732,11 @@ a {
 }
 
 .bl--5-primary {
-    border-left: 5px solid #4634ff !important;
+    border-left: 5px solid var(--main-color) !important;
 }
 
 .border--primary {
-    border-color: #4634ff !important;
+    border-color: var(--main-color) !important;
 }
 
 .border--secondary {
@@ -2953,11 +2958,11 @@ a {
 }
 
 .btn--primary {
-    background-color: #4634ff !important;
+    background-color: var(--main-color) !important;
 }
 
 .btn--primary:hover {
-    background-color: #5e50ee !important;
+    background-color: var(--main-btn-primary) !important;
 }
 
 .btn--secondary {
@@ -3039,12 +3044,12 @@ a {
 }
 
 .btn-outline--primary {
-    color: #4634ff;
-    border-color: #4634ff;
+    color: var(--main-color);
+    border-color: var(--main-color);
 }
 
 .btn-outline--primary:hover {
-    background-color: #4634ff;
+    background-color: var(--main-color);
 }
 
 .btn-outline--secondary {
@@ -3249,7 +3254,7 @@ a {
 .btn--primary.btn--gradi,
 .btn-primary.btn--gradi {
     background: #640064;
-    background-image: linear-gradient(30deg, #4634ff, rgba(115, 103, 240, 0.5)) !important;
+    background-image: linear-gradient(30deg, var(--main-color), rgba(115, 103, 240, 0.5)) !important;
     text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -3546,7 +3551,7 @@ select:focus,
 select:active,
 select:visited,
 select:focus-within {
-    border-color: #4634ff;
+    border-color: var(--main-color);
     box-shadow: 0 3px 9px rgba(50, 50, 9, 0.05), 3px 4px 8px rgba(115, 103, 240, 0.1);
 }
 
@@ -3566,8 +3571,8 @@ select:focus-within {
 }
 
 .form-check-primary .custom-control-input:checked~.custom-control-label::before {
-    border-color: #4634ff;
-    background-color: #4634ff;
+    border-color: var(--main-color);
+    background-color: var(--main-color);
 }
 
 .form-check-secondary .custom-control-input:checked~.custom-control-label::before {
@@ -3634,7 +3639,7 @@ select:focus-within {
 .pincode-input-container input:focus,
 .pincode-input-container input:active {
     box-shadow: none;
-    border-color: #4634ff;
+    border-color: var(--main-color);
 }
 
 .pincode-input-container input~input:focus,
@@ -3791,7 +3796,7 @@ div.dataTables_wrapper div.dataTables_filter {
 
 div.dataTables_wrapper div.dataTables_filter input:focus {
     box-shadow: none;
-    border-color: #4634ff;
+    border-color: var(--main-color);
 }
 
 div.dataTables_wrapper div.dataTables_filter label {
@@ -3813,8 +3818,8 @@ div.dataTables_wrapper .dt-buttons button {
 div.dataTables_wrapper .dt-buttons button:hover,
 div.dataTables_wrapper .dt-buttons button:focus,
 div.dataTables_wrapper .dt-buttons button:active {
-    background-color: #4634ff !important;
-    border-color: #4634ff !important;
+    background-color: var(--main-color) !important;
+    border-color: var(--main-color) !important;
     box-shadow: 0px 0px 7px 2px rgba(115, 103, 240, 0.46) !important;
 }
 
@@ -3874,7 +3879,7 @@ table.dataTable tbody tr td {
 }
 
 table.dataTable thead tr {
-    background-color: #4634ff;
+    background-color: var(--main-color);
 }
 
 table.dataTable thead tr th {
@@ -3902,8 +3907,8 @@ table.dataTable thead tr th {
 }
 
 .dataTables_paginate .pagination .page-item.active .page-link {
-    background-color: #4634ff;
-    border-color: #4634ff;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
     box-shadow: 0px 0px 5px 2px rgba(115, 103, 240, 0.46);
 }
 
@@ -3935,7 +3940,7 @@ table thead th:last-child {
 table.table--light thead th {
     border: none;
     color: #ffffff;
-    background-color: #4634ff;
+    background-color: var(--main-color);
 }
 
 table.table--light.style--two thead th {
@@ -4345,8 +4350,8 @@ table.table--light.style--two tbody td {
 }
 
 .pagination .page-item.active .page-link {
-    background-color: #4634ff;
-    border-color: #4634ff;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
     color: #ffffff;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
@@ -4857,7 +4862,7 @@ th.w-85 {
     right: -35px;
     width: 35px;
     height: 35px;
-    background-color: #4634ff;
+    background-color: var(--main-color);
     color: #ffffff;
     display: none;
 }
@@ -4881,7 +4886,7 @@ th.w-85 {
 }
 
 .sidebar .slimScrollDiv .slimScrollBar {
-    background-color: #4634ff !important;
+    background-color: var(--main-color) !important;
     width: 5px !important;
     opacity: 1 !important;
 }
@@ -4889,7 +4894,7 @@ th.w-85 {
 
 .capsule--block .sidebar-menu-item.active a,
 .capsule--block .sidebar-menu-item.sidebar-dropdown .side-menu--open {
-    border-left: 3px solid #4634ff;
+    border-left: 3px solid var(--main-color);
     border-radius: 0;
 }
 
@@ -5063,17 +5068,17 @@ th.w-85 {
 }
 
 .sidebar__menu .sidebar-menu-item>a:hover .menu-icon {
-    color: #4634ff;
-    text-shadow: 1px 2px 5px #4634ff;
+    color: var(--main-color);
+    text-shadow: 1px 2px 5px var(--main-color);
 }
 
 .sidebar__menu .sidebar-menu-item>a:hover .menu-title {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .sidebar__menu .sidebar-menu-item .side-menu--open,
 .sidebar__menu .sidebar-menu-item.active>a {
-    background-color: #4634ff !important;
+    background-color: var(--main-color) !important;
 }
 
 .sidebar__menu .menu-icon {
@@ -5134,15 +5139,15 @@ th.w-85 {
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item.active>a {
-    background-color: #4634ff59 !important;
+    background-color: var(--main-color-hover) !important;
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item.active a .menu-icon {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item.active a .menu-title {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a {
@@ -5151,11 +5156,11 @@ th.w-85 {
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a:hover .menu-icon {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a:hover .menu-title {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a .menu-icon {
@@ -5184,7 +5189,7 @@ th.w-85 {
 }
 
 .sidebar[class*="bg--"] .sidebar__menu .sidebar-menu-item>a:hover {
-    background-color: #4634ff59;
+    background-color: var(--main-color-hover);
 }
 
 .sidebar[class*="bg--"] .sidebar__menu .sidebar-menu-item .menu-icon,
@@ -5193,7 +5198,7 @@ th.w-85 {
 }
 
 .sidebar[class*="bg--"] .sidebar__menu .sidebar-menu-item .side-menu--open {
-    background-color: #4634ff !important;
+    background-color: var(--main-color) !important;
 }
 
 .sidebar[class*="bg--"] .sidebar__menu .sidebar-dropdown>a::before {
@@ -5241,7 +5246,7 @@ th.w-85 {
 
 .sidebar[class*="bg--white"] .sidebar__menu .sidebar-menu-item>a:hover .menu-icon,
 .sidebar[class*="bg--white"] .sidebar__menu .sidebar-menu-item>a:hover .menu-title {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .sidebar[class*="bg--white"] .sidebar__menu .sidebar-menu-item .menu-icon,
@@ -5255,7 +5260,7 @@ th.w-85 {
 
 .sidebar.pill--bg-1 .sidebar-menu-item .side-menu--open,
 .sidebar.pill--bg-1 .sidebar-menu-item.active>a {
-    background-color: #4634ff;
+    background-color: var(--main-color);
 }
 
 .sidebar.pill--bg-2 .sidebar-menu-item .side-menu--open,
@@ -5357,8 +5362,8 @@ th.w-85 {
 }
 
 .navbar-search .navbar-search-field:focus {
-    border-color: #4634ff;
-    box-shadow: 0 0 5px #4634ff80;
+    border-color: var(--main-color);
+    box-shadow: 0 0 5px var(--main-color)80;
 }
 
 .navbar-search i {
@@ -5604,7 +5609,7 @@ th.w-85 {
 }
 
 .dropdown-menu__footer .view-all-message:hover {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .message-notifi {
@@ -5711,7 +5716,7 @@ th.w-85 {
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #4634ff;
+    background: var(--main-color);
     cursor: pointer;
     box-shadow: 0 0 0 rgba(115, 103, 240, 0.9);
     animation: pulse-primary 2s infinite;
@@ -6108,7 +6113,7 @@ th.w-85 {
 }
 
 .page-breadcrumb li a {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .activity-list__item {
@@ -6725,7 +6730,7 @@ th.w-85 {
 }
 
 .dark-version .dropdown-menu__footer a {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .dark-version .navbar-notifi__left i {
@@ -6756,7 +6761,7 @@ th.w-85 {
 }
 
 .dark-version .custom-file-label::after {
-    background-color: #4634ff;
+    background-color: var(--main-color);
     color: #ffffff;
 }
 
@@ -6931,8 +6936,8 @@ th.w-85 {
 }
 
 .dark-version .pagination .page-item.active .page-link {
-    background-color: #4634ff;
-    border-color: #4634ff;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
     color: #ffffff;
 }
 
@@ -7025,7 +7030,7 @@ th.w-85 {
 
 .icon-btn {
     padding: 3px 8px;
-    background-color: #4634ff;
+    background-color: var(--main-color);
     color: #ffffff;
     border-radius: 3px;
     font-size: 13px;
@@ -7075,8 +7080,8 @@ a.icon-btn {
 
 .badge--primary {
     background-color: rgba(115, 103, 240, 0.1);
-    border: 1px solid #4634ff;
-    color: #4634ff;
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
 }
 
 .badge--dark {
@@ -7293,7 +7298,7 @@ a.icon-btn {
     right: 0;
     display: inline-block;
     height: 100%;
-    background: #4634ff;
+    background: var(--main-color);
     color: #fff;
     font-weight: 500;
     z-index: 25;
@@ -7584,7 +7589,7 @@ label.required:after {
 }
 
 .mailsent .envelope i {
-    color: #4634ff;
+    color: var(--main-color);
 }
 
 .mailsent .envelope .icon {
@@ -7596,7 +7601,7 @@ label.required:after {
     position: absolute;
     width: 10px;
     height: 2px;
-    background: #4634ff;
+    background: var(--main-color);
     display: block;
 }
 
@@ -7944,12 +7949,12 @@ label.required:after {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #4634ff;
+    background-color: var(--main-color);
 }
 
 .mail-icon {
     font-size: 60px;
-    color: #4634ff;
+    color: var(--main-color);
     position: relative;
     z-index: 2;
     background: #fff;
@@ -7993,7 +7998,7 @@ label.required:after {
     position: absolute;
     height: 0%;
     width: 100%;
-    background: #4634ff;
+    background: var(--main-color);
     overflow: hidden;
     color: #fff;
     cursor: pointer;
@@ -8036,7 +8041,7 @@ label.required:after {
 }
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-    border-color: #5E50EE;
+    border-color: var(--main-btn-primary);
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
@@ -8044,7 +8049,7 @@ label.required:after {
 }
 
 .select2-container--default .select2-results__option--selected {
-    background-color: #5E50EE;
+    background-color: var(--main-btn-primary);
 }
 
 .select2-container .select2-selection--multiple {
@@ -8053,7 +8058,7 @@ label.required:after {
 }
 
 .select2-dropdown {
-    border: 1px solid #4634FF;
+    border: 1px solid var(--main-color);
 }
 
 .select2-container--default .select2-selection--single,
