--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12444,7 +12444,8 @@
     
     button,input,optgroup,select,textarea
     {
-    font-family:inherit;font-size:inherit;line-height:inherit;margin:0
+    font-family:inherit;font-size:inherit;line-height:inherit;margin:0;
+    border: 1px solid #e8eef3
     
 }
 
