--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22850,7 +22850,7 @@ a.bg-dark:focus,a.bg-dark:hover,button.bg-dark:focus,button.bg-dark:hover
 }
 .text-capitalize
     {
-    text-transform:capitalize!important
+    text-transform:none!important
     
 }
 .font-weight-light
