--- a/assets/fcadmin/css/app.css
+++ b/assets/fcadmin/css/app.css
@@ -1,6 +1,6 @@
 /* default margin css start */
 :root {
-    --main-color: #a4da22;
+    --main-color: #78a903;
     --main-color-hover: #a4da2259;
     --main-bg-dark: #013f17;
     --main-btn-primary: #056526;
