--- a/assets/fcadmin/css/app.css
+++ b/assets/fcadmin/css/app.css
@@ -5156,7 +5156,11 @@ th.w-85 {
     padding: 10px 6px 10px 8px;
     transition: all 0.3s;
 }
-
+.dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: var(--main-color);
+}
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a:hover .menu-icon {
     color: var(--main-color);
 }
