--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29726,7 +29726,8 @@ table.dataTable
     {
     .settings-box
     {
-    padding:30px
+    padding:30px;
+    
 }
 
 
@@ -29735,7 +29736,8 @@ table.dataTable
     {
     .settings-box
     {
-    margin-left:0;padding:0 25px 25px
+    margin-left:0;padding:0 25px 25px;
+    width: 100% !important;
 }
 
 
@@ -29765,7 +29767,7 @@ table.dataTable
 }
 .settings-box
     {
-    width:100%
+        width: 100% !important;
 }
 #filter-bloc {
     margin-left:0px;
